--- a/product.html
+++ b/product.html
@@ -780,27 +780,51 @@
                         </div>
                         <div class="product-top-left-img">
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                             <div class="product-top-left-img-slide">
+                                <div class="product-top-left-slider-slide-sale">
+                                    -15%
+                                </div>
                                 <img src="/img/jar-15 182.png" alt="">
                             </div>
                         </div>
