please dont delete in this time

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <script src="/jquery-m/jquery.mobile.custom.min.js"> </script>
 
 <link rel="stylesheet" href="fonts_new/stylesheet.css">
-<link rel="stylesheet" href="fonts/stylesheet.css">
+<!-- <link rel="stylesheet" href="fonts/stylesheet.css"> -->
 <link rel="stylesheet" href="css/text-page.css">
 </head>
 <body>
@@ -735,23 +735,24 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main>
-        <div  class="container">
-            <div class="section-top-about">
-                <div class="section-top-img-about section-top-img back-for-top-about">
-                    <img class="hover-img-about" src="./img/image 28.png" alt="">
-                    <div class="section-top-menu-blc">
-                        <p class="top-menu-blc-title">5 МИНУТ И ВЫХОЖУ</p>
-                        <p class="top-menu-blc-desc">Здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине,Здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, 
-                            здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине
-                        </p>
-                        <p class="wrapp-btn-about-cat">
-                            <button class="in-catalog btn-hv">В каталог</button>
-                        </p>
-                    
-                    </div>
+    <main class="main">
+        <div class="container">
+            <div class="section-top-img-about section-top-img back-for-top-about">
+                <img class="hover-img-about" src="./img/image 28.png" alt="">
+                <div class="section-top-menu-blc">
+                    <p class="top-menu-blc-title">5 МИНУТ И ВЫХОЖУ</p>
+                    <p class="top-menu-blc-desc">Здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине,Здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, 
+                        здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине, здесь будет текст о вашем интернет магазине
+                    </p>
+                    <p class="wrapp-btn-about-cat">
+                        <button class="in-catalog btn-hv">В каталог</button>
+                    </p>                
                 </div>
-                <div class="about-container">
+            </div>
+        </div>
+        <div class="about-container">
+            <div class="cont-for-person-about ">
+                <div class="container">
                     <div class="section-abot-person">
                         <div class="person-img-about">
                             <img src="./img/Rectangle 215.png" alt="">
@@ -808,7 +809,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="section-abot-person">
+                </div>
+            </div>
+
+            <div class="cont-for-person-about ">
+                <div class="container">
+                    <div class="section-abot-person ">
                         <div class="person-desc person-desc-second-child">
                             <div class="about-person-name">
                                 Ольга Иванова
@@ -865,6 +871,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+        </div>
+        <div  class="container">
+            <div class="section-top-about">
+
                 <div class="about-container-adaptive mar-top">
                     <div class="about-blc-ad">
                         <div class="about-wrapp-ad">
@@ -927,6 +939,7 @@
                         </div>
                     </div>
                 </div>
+            </div>    
         </div>
         <div class="ad-back-about">
             <div class="container">
