--- a/bonus-s.html
+++ b/bonus-s.html
@@ -19,7 +19,7 @@
     <script src="/jquery-m/jquery.mobile.custom.min.js"> </script>
 
 <link rel="stylesheet" href="fonts_new/stylesheet.css">
-<link rel="stylesheet" href="fonts/stylesheet.css">
+<!-- <link rel="stylesheet" href="fonts/stylesheet.css"> -->
 <link rel="stylesheet" href="css/text-page.css">
 </head>
 <body>
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main>
+    <main class="main">
         
             <div class="container">
                 <div class=" section-top-img back-for-top-bonus">
