--- a/garanties.html
+++ b/garanties.html
@@ -19,7 +19,7 @@
     <script src="/jquery-m/jquery.mobile.custom.min.js"> </script>
 
 <link rel="stylesheet" href="fonts_new/stylesheet.css">
-<link rel="stylesheet" href="fonts/stylesheet.css">
+<!-- <link rel="stylesheet" href="fonts/stylesheet.css"> -->
 <link rel="stylesheet" href="css/text-page.css">
 </head>
 <body>
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main>
+    <main class="main">
             <div class="container">
                 <div class="gar-section-top">
                     <div class="section-top-img">
@@ -813,14 +813,16 @@
                         <ol  >
                             <li class="gar-section-cond-txt num-list-pos">Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид, потребительские свойства</li>
                             <li class="gar-section-cond-txt num-list-pos">Под товаром ненадлежащего качества подразумевается товар, который неисправен и не может обеспечить исполнение своих функциональных качеств. Полученный Товар должен соответствовать описанию на сайте. Отличие элементов дизайна или оформления от заявленного на сайте описания не является признаком ненадлежащего качества.</li>
-                        </ol>
-                        <p class="gar-section-cond-txt">
-                            К товарам ненадлежащего качества относятся товары с истекшим сроком годности и нарушенной упаковкой.
-                        </p>
-                        <ol>
+                            <p class="gar-section-cond-txt">
+                                К товарам ненадлежащего качества относятся товары с истекшим сроком годности и нарушенной упаковкой.
+                            </p>
                             <li class="gar-section-cond-txt num-list-pos"> При отказе потребителя от товара продавец должен возвратить ему денежную сумму, уплаченную потребителем по договору, за исключением расходов продавца на доставку от потребителя возвращенного товара, не позднее чем через десять дней со дня предъявления потребителем соответствующего требования.</li>
                             <li class="gar-section-cond-txt num-list-pos"> Несоответствующие позиции в заказе можно вернуть при сохранении потребительских свойств и товарного вида, наличии этикетки и неповрежденной упаковки.</li>
                             <li class="gar-section-cond-txt num-list-pos"> Если клиент возвращает товар надлежащего качества и общая сумма его заказа становится меньше суммы, предусмотренной для бесплатной доставки, то необходимо возместить продавцу стоимость доставки. Условия доставки указаны в соответствующем разделе сайта.</li>
+                        </ol>
+
+                        <ol>
+                            
                         </ol>
                     </div>
                     
