--- a/order-delivery.html
+++ b/order-delivery.html
@@ -19,7 +19,7 @@
     <script src="/jquery-m/jquery.mobile.custom.min.js"> </script>
 
 <link rel="stylesheet" href="fonts_new/stylesheet.css">
-<link rel="stylesheet" href="fonts/stylesheet.css">
+<!-- <link rel="stylesheet" href="fonts/stylesheet.css"> -->
 <link rel="stylesheet" href="css/text-page.css">
 </head>
 <body>
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main>
+    <main class="main">
         <div  class="container">
             <div class="section-top-order">
                 <div class="section-top-img">
@@ -749,7 +749,7 @@
                         Введите свой город и выберите его из списка,<br>
                         чтобы узнать точные условия доставки и оплаты
                     </p>
-                    <div class="country-select-wrapp">
+                    <div class="country-select-wrapp-or">
                             <select class="select" name="language">
                                 <option disabled>Выберите Ваш город</option>
                                 <option value="value1" selected>Минск</option>
