--- a/present-sert.html
+++ b/present-sert.html
@@ -19,7 +19,7 @@
     <script src="/jquery-m/jquery.mobile.custom.min.js"> </script>
 
 <link rel="stylesheet" href="fonts_new/stylesheet.css">
-<link rel="stylesheet" href="fonts/stylesheet.css">
+<!-- <link rel="stylesheet" href="fonts/stylesheet.css"> -->
 <link rel="stylesheet" href="css/text-page.css">
 </head>
 <body>
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main>
+    <main class="main   ">
 
 
                 <div class="container">
@@ -826,7 +826,7 @@
                         <div class="choise-type-present">
                             <div class="choise-type-wrapp">
                                 <div class="choise-type-number-blc"><p>2</p></div>
-                                <div class="choise-type-nymber-txt"><p>Выберите номинал карты:</p></div>
+                                <div class="choise-type-nymber-txt">Выберите номинал карты:</div>
                             </div>
                         </div>
                         <div class="country-select-wrapp country-select-present">
@@ -836,7 +836,6 @@
                                 <option value="value2" >6.000₽</option>
                                 <option value="value3">7.000₽</option>
                                 <option value="value4">8.000₽</option>
-            
                             </select>
                           <button class="find-country btn-hv">Найти</button>
                         </div>
@@ -845,4 +844,4 @@
     </main>
     <script src="./js/main.js"></script> 
 </body>
-</html>
+</html> 
