--- a/present-sert.html
+++ b/present-sert.html
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="main   ">
+    <main class="main  c-m">
 
 
                 <div class="container">
