--- a/about.html
+++ b/about.html
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="main">
+    <main class="main c-m">
         <div class="container">
             <div class="section-top-img-about section-top-img back-for-top-about">
                 <img class="hover-img-about" src="./img/image 28.png" alt="">
