--- a/order-delivery.html
+++ b/order-delivery.html
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="main">
+    <main class="main c-m">
         <div  class="container">
             <div class="section-top-order">
                 <div class="section-top-img">
