--- a/partners.html
+++ b/partners.html
@@ -735,7 +735,7 @@
         <div class="header-shadow"></div>
     </header>
 
-    <main class="main">
+    <main class="main c-m">
 
             <div class="container">
                 <div class="section-top-img">
@@ -779,7 +779,7 @@
                                 <input type="url" placeholder="Ссылка на сайт или соц сеть">
                                 <textarea name="" id="" cols="30" rows="10" placeholder="Краткое описание предложения"></textarea>
                             </div>
-                            <div class="home-bottom-form-check check-for-par">
+                            <div class="par-bot-form-check check-for-par">
                                 <div class="home-bottom-form-checkbox home-bottom-form-checkbox-for-m">
                                     <input type="checkbox" name="" id="">
                                     <div>
@@ -801,6 +801,7 @@
                     </button>
                 </div>
             </div>
+
     </main>
     <script src="./js/main.js"></script> 
 </body>
