--- a/order-delivery.html
+++ b/order-delivery.html
@@ -766,39 +766,46 @@
 
         </div>
         <div class="order-del-wrapp-back">
-            <div class="container">
+            <div class="container-od-wrapp">
                 <div class="section-del-pay">
-                    <div class="deliver-blc">
-                        <div class="deliver-blc-wrapp">
-                            <div class="title-stl title-stl-ad-or">
-                                Доставка:
-                            </div>
-                            <div class="del-pay-img-row">
-                                <img src="./img/cdek 3.png" alt="">
-                                <img src="./img/new-cart-i-boxberry 3.png" alt="">
-                                <img src="./img/new-cart-i-pochta 3.png" alt="">
-                            </div>
-                            <div class="del-pay-txt">
-                                Интернет магазин "5 минут и выхожу" доставляет по всей Росси и странам СНГ. Мы сотрудничаем с крупнейшими и надежными транспортными компаниями, доставляем Ваши заказы курьерами и в пункты самовывоза.
-        
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pay-blc">
-                        <div class="pay-blc-wrapp">
-                            <div class="title-stl title-stl-ad-or">
-                                Оплата:
-                            </div>
-                            <div class="del-pay-img-row">
-                                <img src="./img/cdek 3.png" alt="">
-                                <img src="./img/new-cart-i-boxberry 3.png" alt="">
-                                <img src="./img/new-cart-i-pochta 3.png" alt="">
-                            </div>
-                            <div class="del-pay-txt">
-                                Оплатить можно как на сайте при оформлени заказа, так и при получении заказа, наличными или картой. Заказ можно оплатить картой любого банка.
+                    <div class="container-del-pay">
+                        <div class="deliver-blc">
+                            <div class="deliver-blc-wrapp">
+                                <div class="title-stl title-stl-ad-or">
+                                    Доставка:
+                                </div>
+                                <div class="del-pay-img-row">
+                                    <img src="./img/cdek 3.png" alt="">
+                                    <img src="./img/new-cart-i-boxberry 3.png" alt="">
+                                    <img src="./img/new-cart-i-pochta 3.png" alt="">
+                                </div>
+                                <div class="del-pay-txt">
+                                    Интернет магазин "5 минут и выхожу" доставляет по всей Росси и странам СНГ. Мы сотрудничаем с крупнейшими и надежными транспортными компаниями, доставляем Ваши заказы курьерами и в пункты самовывоза.
+            
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="pay-blc-back-ad">
+                        <div class="container-del-pay">
+                            <div class="pay-blc">
+                                <div class="pay-blc-wrapp">
+                                    <div class="title-stl title-stl-ad-or">
+                                        Оплата:
+                                    </div>
+                                    <div class="del-pay-img-row">
+                                        <img src="./img/cdek 3.png" alt="">
+                                        <img src="./img/new-cart-i-boxberry 3.png" alt="">
+                                        <img src="./img/new-cart-i-pochta 3.png" alt="">
+                                    </div>
+                                    <div class="del-pay-txt">
+                                        Оплатить можно как на сайте при оформлени заказа, так и при получении заказа, наличными или картой. Заказ можно оплатить картой любого банка.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
