--- a/bonus-s.html
+++ b/bonus-s.html
@@ -14,6 +14,7 @@
     <script src="http://code.jquery.com/jquery-migrate-3.0.0.js"> </script>
     <script src="/jquery-m/jquery.mobile.custom.min.js"> </script>
 
+    <link rel="stylesheet" href="fonts_new/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/text-page.css">
 </head>
