--- a/bonus-s.html
+++ b/bonus-s.html
@@ -733,7 +733,7 @@
 
     <main class="main c-m">
         
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class=" section-top-img back-for-top-bonus">
                         <img class="back-to-bonus" src="./img/Rectangle 111.png" alt="">
                         <div class="section-top-menu-blc-bonus back-blonus-blc">
@@ -754,7 +754,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container container-ad-pad">
             <div class="section-bonus-give-wrapp">
                 <div class="section-bonus-give-wrapp-item">
                     <div class="bonus-circle">
@@ -794,7 +794,7 @@
             </div>
         </div>
         <div class="btw-bonus-wrapp">
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class="btw-bonus-container">
                     <div class="btw-bonus-circle">
                         <p><img src="./img/box-pres.png" alt=""></p>
@@ -803,7 +803,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container container-ad-pad">
             <div class="section-level-cash">
                 <div class="stl-title-for-bonus">
                     Уровни кэшбека:
@@ -850,13 +850,13 @@
             </div>
         </div>
         <div class="btw-bonus-wrapp">
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class="btw-bonus-container">
                     <div class="btw-bonus-2-txt">1 бонус = <span class="btw-bonus-2-txt-stl2">1 рубль</span></div>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container container-ad-pad">
             <div class="section-how-add">
                 <div class=" stl-title-for-bonus">
                     Как получить дополнительные <br class="txt-underline-br-ad">
