--- a/order-delivery.html
+++ b/order-delivery.html
@@ -735,7 +735,7 @@
     </header>
 
     <main class="main c-m">
-        <div  class="container">
+        <div  class="container container-ad-pad">
             <div class="section-top-order">
                 <div class="section-top-img">
                     <img src="./img/Rectangle 135.png" alt="">
@@ -765,11 +765,11 @@
             </div>
 
         </div>
-        <div class="order-del-wrapp-back">
+        <div class="order-del-wrapp-back ">
             <div class="container-od-wrapp">
                 <div class="section-del-pay">
                     <div class="del-blc-back-ad">
-                        <div class="container-del-pay">
+                        <div class="container-del-pay container-ad-pad">
                             <div class="deliver-blc">
                                 <div class="deliver-blc-wrapp">
                                     <div class="title-stl title-stl-ad-or">
@@ -789,7 +789,7 @@
                         </div>
                     </div>
                     <div class="pay-blc-back-ad">
-                        <div class="container-del-pay">
+                        <div class="container-del-pay container-ad-pad">
                             <div class="pay-blc">
                                 <div class="pay-blc-wrapp">
                                     <div class="title-stl title-stl-ad-or">
