--- a/partners.html
+++ b/partners.html
@@ -736,7 +736,7 @@
 
     <main class="main c-m">
 
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class="section-top-img">
                     <img src="./img/Rectangle 140.png" alt="">
                 </div>
@@ -759,7 +759,7 @@
                 </div>
             </div>
             <div class="section-back-connection">
-                <div class="container">
+                <div class="container container-ad-pad">
                     <div class="centering">
                         <div class="section-form-title-connect">
                             Мы открыты к диалогу  и сотрудничеству!
