--- a/present-sert.html
+++ b/present-sert.html
@@ -737,7 +737,7 @@
     <main class="main  c-m">
 
 
-                <div class="container">
+                <div class="container container-ad-pad">
                     <div class="gar-section-top">
                         <div class="section-top-desc top-present-stl">
                             <div class="title-stl">
@@ -753,7 +753,7 @@
                     </div>
                 </div>
                 <div class="present-back-wrapp">
-                    <div class="container">
+                    <div class="container container-ad-pad">
                         <div class="choise-type-present">
                             <div class="choise-type-wrapp">
                                 <div class="choise-type-number-blc"><p>1</p></div>
