--- a/about.html
+++ b/about.html
@@ -732,7 +732,7 @@
     </header>
 
     <main class="main c-m">
-        <div class="container">
+        <div class="container container-ad-pad">
             <div class="section-top-img-about section-top-img back-for-top-about">
                 <img class="hover-img-about" src="./img/image 28.png" alt="">
                 <div class="section-top-menu-blc">
