--- a/garanties.html
+++ b/garanties.html
@@ -733,7 +733,7 @@
     </header>
 
     <main class="main c-m">
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class="gar-section-top">
                     <div class="section-top-img">
                         <img src="./img/Rectangle 132.png" alt="">
@@ -754,7 +754,7 @@
                 </div>
             </div>
             <div class="gar-section-form-wrapp">
-                <div class="container">
+                <div class="container container-ad-pad">
                    <div class="gar-section-cont">
                     <div class="centering">
                         <div class="section-form-title">
@@ -794,7 +794,7 @@
                    </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class="gar-section-cond">
                     <div class="title-stl">
                         Условия возврата
@@ -826,7 +826,7 @@
                 </div>
             </div>
             <div class="gar-section-return">
-                <div class="container">
+                <div class="container container-ad-pad">
                     <div class="gar-return-wrapp">
                         <div class="title-stl">  
                             Сроки возврата
