--- a/order.html
+++ b/order.html
@@ -736,7 +736,7 @@
 
     <main class="main c-m">
 
-            <div class="container">
+            <div class="container container-ad-pad">
                 <div class="section-top-order">
                     <div class="section-top-img">
                         <img src="./img/Rectangle 135.png" alt="">
