added order-from page

--- a/order.html
+++ b/order.html
@@ -797,7 +797,7 @@
                             Способы доставки по Томской области:
                         </div>
                         <div class="ways-to-wrapper">
-                            <div class="ordder-way-blc">
+                            <div class="ordder-way-blc ">
                                 <div class="way-blc-top">
                                     <img src="./img/cdek 3.png" alt="">
                                     <p class="name-ways-order place-deliver">
@@ -805,7 +805,7 @@
                                     </p>
                                 </div>
                                 <div class="way-blc-mid">
-                                   <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 2990 ₽)
+                                   <span class="txt-stl-time-del-f">185 ₽ - </span> (Бесплатно при заказе от 2990 ₽) 
                                 </div>
                                 <div class="time-delivery">
                                     <span class="txt-stl-time-del-f">Срок доставки:</span> <span class="time"> 1-4 рабочих дня</span>
@@ -814,7 +814,8 @@
                                     Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
                                 </div>
                             </div>
-                            <div class="ordder-way-blc">
+                            <div>
+                                                            <div class="ordder-way-blc ">
                                 <div class="way-blc-top">
                                     <img src="./img/cdek 3.png" alt="">
                                     <p class="name-ways-order courier">
@@ -830,6 +831,7 @@
                                 <div class="way-blc-bot">
                                     Оплата онлайн на сайте или наличными / банковской картой при получении в пункте выдачи СДЭК
                                 </div>
+                            </div>
                             </div>
                             <div class="ordder-way-blc">
                                 <div class="way-blc-top">
