--- a/partners.html
+++ b/partners.html
@@ -773,7 +773,7 @@
                             <div class="form-input-wrapp">
                                 <input  type="name" placeholder="ФИО ответственного лица">
                                 <input type="text" placeholder="Наименование организации">
-                                <input type="number" placeholder="Номер телефона">
+                                <input type="tel" placeholder="Номер телефона">
                                 <input type="email" placeholder="Email">
                                 <input type="url" placeholder="Ссылка на сайт или соц сеть">
                                 <textarea name="" id="" cols="30" rows="10" placeholder="Краткое описание предложения"></textarea>
