--- a/garanties.html
+++ b/garanties.html
@@ -841,6 +841,85 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <footer>
+                    <div class="footer-left">
+                        <a href="" class="footer-logo">
+                            <img src="/img/footer-logo.svg" alt="">
+                        </a>
+                        <a href="tel:+7 (913)815-26-80" class="footer-phone">+7 (913)815-26-80</a>
+                        <a href="mail:5minut_tomsk@mail.ru" class="footer-mail">5minut_tomsk@mail.ru</a>
+                        <div class="footer-left-bottom-text">
+                            Для оформления заказов, сотрудничества и вопросов.
+                        </div>
+                    </div>
+                    <div class="footer-right">
+                        <div class="footer-right-column">
+                            <div class="footer-right-column-title">
+                                Категории
+                            </div>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                        </div>
+                        <div class="footer-right-column">
+                            <div class="footer-right-column-title">
+                                Категории
+                            </div>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                            <a href="" class="footer-right-column-item">Каталог</a>
+                        </div>
+                        <div class="footer-right-column">
+                            <div class="footer-right-column-title">
+                                Онлайн помощь по всем вопросам
+                            </div>
+                            <div class="footer-right-text">
+                                Мы с удовольствием поможем тебе подобрать продукты, ответим на все вопросы и примем заказ.
+                            </div>
+                            <div class="footer-right-soc">
+                                <a href="">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="10.6844" cy="11" r="10.5" fill="#695D54"/>
+    <path d="M11.2094 14.7844C7.22087 14.7844 4.94587 12.05 4.85107 7.5H6.84899C6.91462 10.8396 8.38753 12.2542 9.5542 12.5458V7.5H11.4354V10.3802C12.5875 10.2563 13.7979 8.94375 14.2063 7.5H16.0875C15.774 9.27917 14.4615 10.5917 13.5282 11.1313C14.4615 11.5688 15.9563 12.7135 16.525 14.7844H14.4542C14.0094 13.399 12.9011 12.3271 11.4354 12.1813V14.7844H11.2094Z" fill="white"/>
+    </svg>
+                                </a>
+                                <a href="">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="10.6844" cy="11" r="10.5" fill="#695D54"/>
+    <g clip-path="url(#clip0_49_17461)">
+    <path d="M10.6926 4.5835C7.15921 4.5835 4.28283 7.4574 4.28155 10.9908C4.28091 12.1202 4.57673 13.2228 5.13761 14.1944L4.26776 17.4181L7.62556 16.6247C8.56184 17.1355 9.61584 17.4037 10.6888 17.4043H10.6913C14.224 17.4043 17.0992 14.5297 17.1011 10.997C17.1024 9.28425 16.4363 7.67389 15.226 6.46231C14.0157 5.25137 12.4073 4.58414 10.6926 4.5835ZM10.6913 5.86695C12.0621 5.8676 13.3502 6.40203 14.3186 7.36975C15.287 8.33877 15.8189 9.62633 15.8176 10.9958C15.8164 13.822 13.5175 16.1208 10.6901 16.1208C9.83464 16.1202 8.9873 15.9054 8.24097 15.4979L7.80855 15.2623L7.33102 15.3751L6.06761 15.6734L6.37594 14.5278L6.51507 14.0139L6.24935 13.5527C5.80142 12.7775 5.56437 11.8911 5.56501 10.9908C5.56629 8.16587 7.86579 5.86695 10.6913 5.86695ZM8.42396 8.03279C8.31679 8.03279 8.14352 8.0729 7.99656 8.23333C7.8496 8.39312 7.43505 8.78014 7.43505 9.56818C7.43505 10.3562 8.00909 11.118 8.08931 11.2251C8.16888 11.3317 9.19737 12.9999 10.8254 13.6417C12.1782 14.1749 12.4529 14.0697 12.7469 14.0427C13.0408 14.0164 13.695 13.6561 13.8285 13.2819C13.962 12.9078 13.9623 12.586 13.9225 12.5199C13.8827 12.4531 13.7759 12.4133 13.6155 12.3331C13.4557 12.2529 12.6682 11.8662 12.5213 11.813C12.3743 11.7597 12.2668 11.7328 12.1603 11.8932C12.0538 12.0536 11.7476 12.4134 11.6539 12.5199C11.5602 12.6271 11.4672 12.6415 11.3067 12.5612C11.1463 12.4804 10.6305 12.3108 10.0183 11.7653C9.54209 11.3412 9.2208 10.8178 9.12711 10.6574C9.03406 10.4976 9.11833 10.4098 9.19855 10.3302C9.27042 10.2584 9.35773 10.1432 9.43794 10.0495C9.51752 9.95578 9.54511 9.88903 9.59838 9.78251C9.65164 9.67598 9.62438 9.58197 9.58459 9.50175C9.5448 9.42153 9.23322 8.63056 9.09076 8.31355C8.97075 8.04723 8.84401 8.04104 8.72979 8.03655C8.63673 8.0327 8.53049 8.03279 8.42396 8.03279Z" fill="white"/>
+    </g>
+    <defs>
+    <clipPath id="clip0_49_17461">
+    <rect width="12.8333" height="12.8333" fill="white" transform="translate(4.26776 4.5835)"/>
+    </clipPath>
+    </defs>
+    </svg>
+    
+                                </a>
+                                <a href="">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="10.6844" cy="11" r="10.5" fill="#695D54"/>
+    <path d="M5.613 10.3515C8.58815 9.03433 10.5721 8.16599 11.5647 7.74646C14.3989 6.54859 14.9878 6.34051 15.3717 6.33356C15.4561 6.33212 15.6449 6.35339 15.7672 6.4542C15.8704 6.53933 15.8988 6.65433 15.9124 6.73505C15.926 6.81576 15.9429 6.99962 15.9295 7.14329C15.7759 8.78308 15.1113 12.7624 14.7732 14.599C14.6302 15.3761 14.3485 15.6367 14.0758 15.6622C13.4831 15.7176 13.0331 15.2642 12.459 14.8819C11.5608 14.2836 11.0534 13.9111 10.1815 13.3273C9.17387 12.6526 9.82706 12.2817 10.4013 11.6757C10.5516 11.5171 13.1629 9.1036 13.2134 8.88466C13.2197 8.85728 13.2256 8.75521 13.1659 8.70132C13.1062 8.64742 13.0182 8.66585 12.9546 8.68051C12.8645 8.70129 11.4296 9.66503 8.64981 11.5717C8.24251 11.8559 7.87359 11.9944 7.54305 11.9871C7.17866 11.9791 6.47771 11.7778 5.95662 11.6057C5.31749 11.3946 4.80953 11.2829 4.85376 10.9244C4.8768 10.7377 5.12988 10.5467 5.613 10.3515Z" fill="white"/>
+    </svg>
+    
+                                </a>
+                            </div>
+                            <a class="footer-right-inst">
+                                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <rect x="0.909091" y="0.909091" width="38.1818" height="38.1818" rx="9.09091" stroke="#7C7A77" stroke-width="1.81818"/>
+    </svg>
+                                <span>@5minut_tomsk</span>
+                            </a>
+                        </div>
+                    </div>
+                </footer>
+            </div>
     </main>
     <script src="./js/main.js"></script> 
 </body>
