added many things

--- a/change-pass.html
+++ b/change-pass.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="css/user-data.css">
 </head>
 <body>
-    <!-- <div class="mob-bottom-menu">
+    <div class="mob-bottom-menu">
         <div class="mob-bottom-menu-item">
             <div class="header-menu-catalog">
                 <div class="header-menu-catalog-button">
@@ -732,7 +732,7 @@
             </div>
         </div>
         <div class="header-shadow"></div>
-    </header> -->
+    </header>
 
     <main class="main ">
         <div class="section-user-data container">
@@ -741,7 +741,7 @@
         <div class="user-data-links-wrapp-ad ">
            <div>
                 <ul class="user-data-list">
-                    <li class="user-data-link ">Личные данные</li>
+                    <li class="user-data-link  ">Личные данные</li>
                     <li class="user-data-link">Мои заказы</li>
                     <li class="user-data-link user-data-link-open-ad">Изменить пароль</li>
                     <li class="user-data-link">Мои отзывы</li>
@@ -772,35 +772,25 @@
         <div class="user-data-container container">
             <div class="user-data-links-wrapp">
                 <ul class="user-data-list">
-                    <li class="user-data-link ">Изменить пароль</li>
+                    <li class="user-data-link user-data-link-first-el">Личные данные</li>
                     <li class="user-data-link ">Мои заказы</li>
                     <li class="user-data-link user-data-link-open">Изменить пароль</li>
-                    <li class="user-data-link">Мои отзывы</li>
                     <li class="user-data-link">Избранные товары</li>
                     <li class="user-data-link">Выход</li>
                 </ul>
-                <!-- <div class="user-data-level-bonus">
-
-                    <div class="user-level-bonus-top">
-                        Ваш уровень возврата бонусов - <span class="user-level-bonus-top-sp">7%</span>
-                    </div>
-                    <div class="user-level-bonus-bot">
-                        Сделайте заказ еще на 3000 р и получайте 10% бонусами!
-                    </div>
-                </div> -->
             </div>
             
             <div class="user-data-form-wrapp">
                 <form  action="">
                    <div class="user-form-pass-wrapp">
-                        <div class="user-data-input-container user-data-input-20"><label for="us-dt-n">Текущий пароль</label><input id="us-dt-n" type="text" placeholder=""></div>
-                        <div class="user-data-input-container user-data-input-20"><label for="us-dt-sn">Новый пароль</label><input id="us-dt-sn" type="text" placeholder=""> </div>
-                        <div class="user-data-input-container user-data-input-22"><label for="us-dt-lsn">Новый пароль еще раз</label><input id="us-dt-lsn" type="text" placeholder=""> </div>
+                        <div class="user-data-input-container user-data-input-container-pass "><label for="us-dt-n">Текущий пароль</label><input id="us-dt-n" type="text" placeholder=""></div>
+                        <div class="user-data-input-container user-data-input-container-pass user-data-input-pass user-data-input-22"><label for="us-dt-sn">Новый пароль</label><input id="us-dt-sn" type="text" placeholder=""> </div>
+                        <div class="user-data-input-container user-data-input-container-pass user-data-input-22"><label for="us-dt-lsn">Новый пароль еще раз</label><input id="us-dt-lsn" type="text" placeholder=""> </div>
                    </div>
-                   <div class="user-data-btn btn-hv">
+                   <div class="user-data-btn user-data-btn-pass btn-hv">
                         Сохранить
                    </div>
-                   <div class="user-data-btn-ad btn-hv">
+                   <div class="user-data-btn-ad user-data-btn-pass-ad btn-hv">
                     Сохранить
                 </div>
                 </form>
