--- a/my-order.html
+++ b/my-order.html
@@ -979,7 +979,7 @@
             <div class="my-order-pay-title">Оплачено:</div>
             <div class="my-order-pay-item my-order-pay-item-top"><p>Скидка бонусами</p><p>586₽</p></div>
             <div class="my-order-pay-item my-order-pay-item-bot"><p>Скидка по акции</p><p>268₽</p></div>
-            <div class="my-order-pay-item"><p>Сумма без скидки</p><p>3678₽</p></div>
+            <div class="my-order-pay-item"><p>Сумма без скидки</p><p class="my-order-pay-item-stl">3678₽</p></div>
             <div class="my-order-pay-result"><p class="my-order-result-txt">Итого:</p><p class="my-order-result-num">2692₽</p></div>
         </div>
         <div class="my-order-popup-status">
