--- a/user-data.html
+++ b/user-data.html
@@ -741,7 +741,7 @@
         <div class="user-data-links-wrapp-ad ">
            <div class="scroll-wrapp">
                 <ul class="user-data-list">
-                    <li class="user-data-link user-data-link-open-ad">Личные данные</li>
+                    <li class="user-data-link user-data-link-first-el user-data-link-open-ad">Личные данные</li>
                     <li class="user-data-link">Мои заказы</li>
                     <li class="user-data-link">Изменить пароль</li>
                     <li class="user-data-link">Мои отзывы</li>
@@ -770,8 +770,8 @@
             </div>
         </div>
         <div class="user-data-container container">
-            <div class="user-data-links-wrapp">
-                <ul class="user-data-list">
+            <div class="user-data-links-wrapp user-data-links-wrapp-for-data">
+                <ul class="user-data-list ">
                     <li class="user-data-link user-data-link-open">Личные данные</li>
                     <li class="user-data-link">Мои заказы</li>
                     <li class="user-data-link">Изменить пароль</li>
@@ -793,7 +793,7 @@
             <div class="user-data-form-wrapp">
                 <form  action="">
                    <div class="user-form-date-top">
-                        <div class="user-data-input-container user-data-input-20"><label for="us-dt-n">Имя</label><input id="us-dt-n" type="text" placeholder="Егор"></div>
+                        <div class="user-data-input-container "><label for="us-dt-n">Имя</label><input id="us-dt-n" type="text" placeholder="Егор"></div>
                         <div class="user-data-input-container user-data-input-20"><label for="us-dt-sn">Фамилия</label><input id="us-dt-sn" type="text" placeholder="Прохоров"> </div>
                         <div class="user-data-input-container user-data-input-22"><label for="us-dt-lsn">Отчество</label><input id="us-dt-lsn" type="text" placeholder="Владимирович"> </div>
                         <div class="user-data-input-container user-data-input-22"><label for="us-dt-d">Дата рождения</label><input id="us-dt-d" type="text" placeholder="29.06.1998"> </div>
