added background for popup

--- a/my-review.html
+++ b/my-review.html
@@ -950,6 +950,7 @@
         <div class="exit-popup-txt"><p>Вы уверены что хотите выйти из личного кабинета?</p></div>
         <div  onclick="closeExitPopup()" class="exit-popup-btn btn-hv">Выйти</div>
     </div>
+    <div class="bg-popup"></div>
     <script src="./js/main.js"></script> 
 </body>
 </html>
