so many changes

--- a/order-form.html
+++ b/order-form.html
@@ -1044,7 +1044,7 @@
                                 <div class="bonus-right">532шт</div>
                             </div>
                         </div>
-                        <div class="you-order-btn">
+                        <div onclick="openGivenPopup()" class="you-order-btn">
                             <p>Оформить заказ</p>
                         </div>
                     </div>
@@ -1129,6 +1129,14 @@
                     </div>
                 </footer>
             </div>
+
+            <div class="popup-tgiven-wrapp">
+                <div onclick="closeGivenPopup()" class="exit-popup-close"></div>
+                <div class="tgiven-img"><img src="./img/Mask group-given.png" alt=""></div>
+                <div class="tgiven-txt">Ура! Мы получили Ваш заказ!</div>
+                <div class="tgiven-desc">В течении 24 Часов на Ваш email придет трек номер с помощью которого вы сможете отслеживать Ваш заказ</div>
+            </div>
+            <div class="bg-popup"></div>
     </main>
     <script src="./js/main.js"></script> 
 </body>
