add right popup cart

--- a/cart.html
+++ b/cart.html
@@ -1001,8 +1001,8 @@
                     Идеальная пара:
                 </div>
             <!-- </div> -->
-            <div class="product-couple-container slider">
-                <div class="product-couple-slider dots-line slider-arrows">
+            <div class="product-couple-container  slider">
+                <div class="product-couple-slider cartpage dots-line slider-arrows">
                     <div class="stock-block-product">
                         <div class="stock-block-product-img">
                             <div class="stock-block-product-img-slider">
